# tictactoe

./: .gitignore  CMakeLists.txt  README.md  build-and-run.sh  build-run.sh  meson.build  mingw-build.bat
src/: Common.cpp  Common.hpp  Config.cpp  Config.hpp  Engine.cpp  Engine.hpp  Game.cpp  Game.hpp  Main.cpp  Window.cpp  Window.hpp  meson.build
